docs: rename sync -> commit, extract -> query; misc improvements

--- a/docs/pages/api-reference/sources/s3.md
+++ b/docs/pages/api-reference/sources/s3.md
@@ -73,12 +73,12 @@ example, to use tab-delimited data enter `"\t"`.
 
 #### Errors
 <Expandable title="Connectivity or authentication errors">
-Fennel server try to do some lightweight operations on the bucket during the sync
+Fennel server try to do some lightweight operations on the bucket during the commit
 operation - all connectivity or authentication related errors should be caught
-during the sync itself.
+during the commit itself.
 
 Note: Mock client can not talk to any external data source and hence is unable to
-do this validation at sync time.
+do this validation at commit time.
 </Expandable>
 
 <Expandable title="Schema mismatch errors">
@@ -106,10 +106,10 @@ been seen so far and hence a cursor field doesn't need to be specified.
 </LeftSection>
 <RightSection>
 <pre snippet="api-reference/sources/s3#s3_prefix"
-    status="success" message="S3 ingestion via prefix" highlight="4-8,10">
+    status="success" message="S3 ingestion via prefix">
 </pre>
 <pre snippet="api-reference/sources/s3#s3_path"
-    status="success" message="S3 ingestion via path" highlight="4-8,10,12">
+    status="success" message="S3 ingestion via path">
 </pre>
 </RightSection>
 </Divider>
