--- a/docs/pages/api-reference/sources/s3.md
+++ b/docs/pages/api-reference/sources/s3.md
@@ -72,7 +72,7 @@ example, to use tab-delimited data enter `"\t"`.
 </Expandable>
 
 <Expandable title="spread" type="Optional[Duration]" defaultVal="None">
-When using `path` with stftime specifiers, Fennel allows for the timestamp used in path
+When using `path` with strftime specifiers, Fennel allows for the timestamp used in path
 partitioning to differ from the `timestamp` field of the source dataset. In cases where these
 timestamps differ, `spread` indicates the maximum difference between the partition interval and
 the value of the timestamp field for data in that partition. A `None` value indicates no spread, 
