Support indirect role based access for S3

--- a/docs/pages/api-reference/connectors/s3.md
+++ b/docs/pages/api-reference/connectors/s3.md
@@ -21,6 +21,11 @@ AWS Secret Access Key. This field is not required if role-based access is used
 or if the bucket is public.
 </Expandable>
 
+<Expandable title="role_arn" type="Optional[str]" defaultVal="None">
+Role ARN to assume to get access to S3. This field is not required if role-based access is used 
+or if AWS access and secret keys are used or if the bucket is public.
+</Expandable>
+
 
 #### Bucket Parameters
 <Expandable title="bucket" type="str">
@@ -124,9 +129,13 @@ With that ready, simply don't specify `aws_access_key_id` and
 `aws_secret_access_key` and Fennel will automatically fall back to IAM based 
 access.
 
+In case you do not want to provide S3 access to `FennelDataAccessRole-`, pass `role_arn`
+parameter inside connector params and make sure `FennelDataAccessRole-` can assume that IAM role
 
 :::info
-Fennel uses  `file_last_modified` property exported by S3 to track what data has 
+- Fennel uses  `file_last_modified` property exported by S3 to track what data has 
 been seen so far and hence a cursor field doesn't need to be specified.
+- Fennel supports `role_arn` parameter only for CSV, JSON, Parquet and Avro data formats. In case
+you require support for Hudi or Deltalake format, please reach out to Fennel support
 :::
 
