--- a/docs/pages/api-reference/connectors/s3.md
+++ b/docs/pages/api-reference/connectors/s3.md
@@ -102,7 +102,7 @@ this path to have a timestamp between `2024-02-06 18:00:00` and `2024-02-08 06:0
 <pre snippet="api-reference/sources/s3#s3_path"
     status="success" message="S3 ingestion via path">
 </pre>
-<pre snippet="api-reference/sinks/s3#basic"
+<pre snippet="api-reference/sinks/s3_sink#basic"
     status="success" message="S3 sink">
 </pre>
 
