Add tests and update documentation

--- a/docs/pages/api-reference/source_connectors/s3.md
+++ b/docs/pages/api-reference/source_connectors/s3.md
@@ -8,7 +8,7 @@ Data connector to source data from S3.
 
 #### Account Parameters
 <Expandable title="name" type="str">
-A name to identify the source. The name should be unique across all Fennel sources.
+A name to identify the source. The name should be unique across all Fennel connectors.
 </Expandable>
 
 <Expandable title="aws_access_key_id" type="Optional[str]" defaultVal="None">
@@ -58,7 +58,7 @@ Exactly one of `prefix` or `path` must be provided.
 
 <Expandable title="format" type="str" defaultVal="csv">
 The format of the files you'd like to ingest. Valid values are "csv", "parquet", 
-"json", ["delta"](/api-reference/connectors/deltalake) or ["hudi"](/api-reference/connectors/hudi).
+"json", ["delta"](/api-reference/source_connectors/deltalake) or ["hudi"](/api-reference/source_connectors/hudi).
 </Expandable>
 
 <Expandable title="delimiter" type="Optional[str]" defaultVal=",">
@@ -101,9 +101,6 @@ this path to have a timestamp between `2024-02-06 18:00:00` and `2024-02-08 06:0
 </pre>
 <pre snippet="api-reference/sources/s3#s3_path"
     status="success" message="S3 ingestion via path">
-</pre>
-<pre snippet="api-reference/sinks/s3_sink#basic"
-    status="success" message="S3 sink">
 </pre>
 
 #### Errors
