Added secrets manager documentation

--- a/docs/pages/api-reference/sink_connectors/s3.md
+++ b/docs/pages/api-reference/sink_connectors/s3.md
@@ -11,12 +11,12 @@ Data connector to sink data to S3.
 A name to identify the sink. The name should be unique across all Fennel connectors.
 </Expandable>
 
-<Expandable title="aws_access_key_id" type="Optional[str]" defaultVal="None">
+<Expandable title="aws_access_key_id" type="Optional[str] | Optional[Secret]" defaultVal="None">
 AWS Access Key ID. This field is not required if role-based access is used or if
 the bucket is public.
 </Expandable>
 
-<Expandable title="aws_secrete_access_key" type="Optional[str]" defaultVal="None">
+<Expandable title="aws_secret_access_key" type="Optional[str] | Optional[Secret]" defaultVal="None">
 AWS Secret Access Key. This field is not required if role-based access is used 
 or if the bucket is public.
 </Expandable>
