--- a/docs/pages/api-reference/source_connectors/s3.md
+++ b/docs/pages/api-reference/source_connectors/s3.md
@@ -16,7 +16,7 @@ AWS Access Key ID. This field is not required if role-based access is used or if
 the bucket is public.
 </Expandable>
 
-<Expandable title="aws_secrete_access_key" type="Optional[str] | Optional[Secret]" defaultVal="None">
+<Expandable title="aws_secret_access_key" type="Optional[str] | Optional[Secret]" defaultVal="None">
 AWS Secret Access Key. This field is not required if role-based access is used 
 or if the bucket is public.
 </Expandable>
